<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lo_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_dark_background"
    android:visibility="visible" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/actions_list_searchbox"
            style="@style/SearchBox"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:focusable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="8dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/menu_radio"
            android:textColor="@color/txt_channellist_section_header"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_channellist"
            android:orientation="vertical"
            android:padding="8dp" >

            <Button
                android:id="@+id/button_channel_theloai"
                style="@style/ButtonChannel"
                android:layout_marginTop="0dp"
                android:drawableLeft="@drawable/img_btn_channel_theloai"
                android:text="@string/menu_theloai"
                android:textAlignment="textStart"
                android:textAllCaps="true" />

            <View style="@style/Divider.Channellist" />

            <Button
                android:id="@+id/button_channel_chude"
                style="@style/ButtonChannel"
                android:drawableLeft="@drawable/img_btn_channel_chude"
                android:text="@string/menu_chude"
                android:textAlignment="textStart"
                android:textAllCaps="true" />

            <View style="@style/Divider.Channellist" />

            <Button
                android:id="@+id/button_channel_nghesi"
                style="@style/ButtonChannel"
                android:drawableLeft="@drawable/img_btn_channel_nghesi"
                android:text="@string/menu_nghesi"
                android:textAlignment="textStart"
                android:textAllCaps="true" />

            <View style="@style/Divider.Channellist" />

            <Button
                android:id="@+id/button_channel_electronic"
                style="@style/ButtonChannel"
                android:drawableLeft="@drawable/img_btn_channel_electronic"
                android:text="@string/menu_electronic"
                android:textAlignment="textStart"
                android:textAllCaps="true" />

            <View style="@style/Divider.Channellist" />

            <Button
                android:id="@+id/button_channel_suggest"
                style="@style/ButtonChannel"
                android:drawableLeft="@drawable/img_btn_channel_suggest"
                android:drawableRight="@null"
                android:text="@string/menu_nghegoiy"
                android:textAlignment="textStart"
                android:textAllCaps="true" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="8dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/menu_canhan"
            android:textColor="@color/txt_channellist_section_header"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_channellist"
            android:orientation="vertical"
            android:padding="8dp" >

            <Button
                android:id="@+id/button_channel_favchannels"
                style="@style/ButtonChannel"
                android:layout_marginTop="0dp"
                android:drawableLeft="@drawable/img_btn_channel_favchannels"
                android:text="@string/menu_kenhyeuthich"
                android:textAlignment="textStart"
                android:textAllCaps="true" />

            <View style="@style/Divider.Channellist" />

            <Button
                android:id="@+id/button_channel_favsongs"
                style="@style/ButtonChannel"
                android:drawableLeft="@drawable/img_btn_channel_favsongs"
                android:text="@string/menu_baihatyeuthich"
                android:textAlignment="textStart"
                android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>