<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_dark_background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lo_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tv_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/holo"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lo_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lo_logo"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <!--
        <ViewFlipper android:id="@+id/tv_flipper" 
            		android:layout_width="fill_parent" 
            		android:layout_height="wrap_content" 
            		android:flipInterval="1000" >
				
		</ViewFlipper>
        -->

        <TextView
            android:id="@+id/tv_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=">_&lt;"
            android:textColor="@color/holo"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="#C0C0C0"
            android:textSize="14sp" />

        <!--
		<ImageButton 
               android:id="@+id/bt_retry"
               android:layout_marginTop="20dp"
               android:src="@drawable/img_btn_refresh"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:background="@null"/>
        -->

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/bt_retry1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Retry"
                android:textColor="#ffffff" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lo_honor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/lo_message"
        android:gravity="right|bottom"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_honor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="0dp"
            android:gravity="right"
            android:text="@string/honor"
            android:textColor="#B5B5B5"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>